# AI-Skill-builder

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
agents/ai-skill-builder/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md
agents/ai-skill-builder/.openclaw/: workspace-state.json
agents/ai-skill-builder/skills/build-mleval-image/: SKILL.md
agents/ai-skill-builder/skills/build-skill-from-docs/: SKILL.md
agents/ai-skill-builder/skills/monitor-mleval-job/: SKILL.md
agents/ai-skill-builder/skills/refresh-mleval-pvc/: SKILL.md
agents/ai-skill-scout/: .gitignore  AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md
agents/ai-skill-scout/.openclaw/: workspace-state.json
agents/skill-tester/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md
agents/skill-tester/.openclaw/: workspace-state.json
deploy/k8s/: README.md  helper-jupyter-1gpu.yaml  job-debug-trl-grpo.yaml  pip-warm.yaml  pvc.yaml  secret.template.yaml
docker/: agent.Dockerfile  entrypoint.sh
docs/: env-build-details.md
docs/eval/: ops.md  overview.md  peft-skill-eval-report.md  skill-retrieval-design.md  stage1.md  stage2.md  task-authoring.md
docs/eval/results/: README.md  ab-metrics-report.html
docs/project-overview/: build_pptx.py  project-report.tex
docs/skill-builder/: hld.md  plan.md  skill-reliability-checklist.md  skill-shape-principles.md
docs/skill-scout/: hld.md  plan.md
infra/agents/: _interface.md
infra/agents/aide/: Dockerfile  README.md  entrypoint.sh  job.yaml.tmpl  job_cpu.yaml.tmpl  requirements.in  run_aide.py
infra/agents/aide/aide_sidecar/: __init__.py  (+6 more)
infra/agents/mlevolve/: Dockerfile  README.md  _smoke_imports.py  config.yaml  entrypoint.sh  job.yaml.tmpl  requirements.txt  run_mlevolve.py
infra/orchestrator/: __init__.py  run_ab.py
infra/skills/: README.md
infra/skills/_template/: SKILL.md
infra/skills/peft-tuning/: SKILL.md  requirements.txt
infra/skills/tabular-baseline/: SKILL.md  requirements.txt
infra/skills/vllm-inference/: SKILL.md  requirements.txt
infra/tasks/: README.md  _harness_rules.md
infra/tasks/_template/: README.md  instruction.md  predicates.py
infra/tasks/boolq/: README.md  instruction.md
infra/tasks/gsm8k/: README.md  instruction.md
infra/tasks/house-prices/: README.md  instruction.md  predicates.py  requirements.txt
infra/tasks/jigsaw-toxic/: instruction.md  predicates.py  requirements.txt
infra/tasks/llama-inference/: instruction.md  predicates.py  requirements.txt
infra/tasks/samsum/: instruction.md  prompt_overlay.yaml
scripts/: l1_l2_compare.py  monitor_run_health.sh  monitor_spike018_reruns.sh  watch_pod_failures.sh
src/mleval/: __init__.py
src/mleval/_cli/: main.py
src/mleval/analyzer/: __init__.py  adapter_aide.py  adapter_mlevolve.py  aggregate.py  metrics.py  pricing.py  stage_classifier.py  stage_metrics.py  state_predicates.py
src/mleval/grader/: __init__.py  __main__.py  accuracy.py  exact_match.py  grade.py  rouge.py  validate.py
tests/: test_analyzer_aggregate.py  test_cli.py  test_diff_guard.py  test_grader.py  test_metric_direction.py  test_skill_selector_context.py  test_validate.py
(+85 files in other folders)
